--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -121,7 +121,8 @@
 } 
 
 .form-label { 
-    margin-bottom: 10px; 
+    margin-top: 10px; 
+    margin-bottom: 5px; 
     font-size: 16px; 
     color: #444; 
     text-align: left; 
@@ -129,7 +130,7 @@
 
 .form-input { 
     padding: 10px; 
-    margin-bottom: 20px; 
+    margin-bottom: 10px; 
     border: 1px solid #ccc; 
     border-radius: 8px; 
     font-size: 16px; 
@@ -282,7 +283,7 @@
     position: relative;
     background-color: #fff;
     width: 500px;
-    height: 200px;
+    height: 500px;
     border: 1px solid rgb(179, 179, 179);
     border-radius: 15px;
     overflow: hidden;
