--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 16.66rem;
+    width: 100%;
 }
   
 .PostContainer img {
