--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,86 +1,28 @@
 .Layout {
-    display: grid;
-    gap: 10
-}
 
+    gap: 10px;
+}
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    margin: auto 200px;
+}
 .Left_part {
     width: 150px;
-    grid-column: 1 / 2;
+    /* grid-column: 1 / 2; */
     background-color: white;
 }
 
-.Feed {
-    grid-column: 2/3;
-    background-color: white;
-    min-width: 500px;
-    border: 1px solid black;
-    overflow-y: scroll;
-    padding: 0 10px;
-     
-}
+
 
 .Right_part {
     min-width: 150px;
-    grid-column: 3 / 4;
+    /* grid-column: 3 / 4; */
     background-color: white;
+    padding: 10px 10px;
 }
 
-.PostContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 100%;
-}
-  
-.PostContainer img {
-    margin-top: 1rem;
-    margin-bottom: 0.5rem;
-    height: 350px; 
-    object-fit: none;
-    width: 100%;
-  }
 
-.PostContainer h2 {
-    margin-top: 1rem;
-    margin-bottom: 0.5rem;
-    font-size: 1.2rem;
-    font-weight: 600;
-}
-
-.PostContainer p {
-    margin-top: 1rem;
-    margin-bottom: 0.5rem;
-    font-size: 0.88rem;
-    font-weight: 300;
-    line-height: 1rem;
-    margin: 0;
-}
-
-.PostContainer h3 {
-    margin: 0;
-    font-weight: 650;
-    font-size: 33px;
-    text-align: center;
-    display: inline-block;
-    padding-right: 5px;
-    
-}
-
-.LikeButton {
-    color: rgb(255, 255, 255);
-    background-color: rgb(141, 141, 188);
-    border-radius: 5px;
-    border: 5p;
-    
-}
-
-.CreatePostButton {
-    color: rgb(255, 255, 255);
-    background-color: rgb(141, 141, 188);
-    border-radius: 5px;
-    border: 5p;
-    
-}
 
 .Utils {
     display: flex; 
@@ -91,241 +33,3 @@
 
 
 
-.PopupBody { 
-    margin: 0; 
-    padding: 0; 
-    display: flex; 
-    align-items: center; 
-    justify-content: center; 
-    height: 100vh; 
-    background-color: #f0f0f0; 
-    font-family: Arial, sans-serif; 
-} 
-
-
-.popup-box { 
-    background: #fff; 
-    padding: 24px; 
-    border-radius: 12px; 
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4); 
-    width: 320px; 
-    text-align: center; 
-    opacity: 0; 
-    transform: scale(0.8); 
-
-} 
-
-.form-container { 
-    display: flex; 
-    flex-direction: column; 
-} 
-
-.form-label { 
-    margin-top: 10px; 
-    margin-bottom: 5px; 
-    font-size: 16px; 
-    color: #444; 
-    text-align: left; 
-} 
-
-.form-input { 
-    padding: 10px; 
-    margin-bottom: 10px; 
-    border: 1px solid #ccc; 
-    border-radius: 8px; 
-    font-size: 16px; 
-    width: 100%; 
-    box-sizing: border-box; 
-} 
-
-.btn-submit, 
-.btn-close-popup { 
-    padding: 12px 24px; 
-    border: none; 
-    border-radius: 8px; 
-    cursor: pointer; 
-    transition: background-color 0.3s ease, color 0.3s ease; 
-} 
-
-.btn-submit { 
-    background-color: green; 
-    color: #fff; 
-} 
-
-.btn-close-popup { 
-    margin-top: 12px; 
-    background-color: #e74c3c; 
-    color: #fff; 
-} 
-
-.btn-submit:hover, 
-.btn-close-popup:hover { 
-    background-color: #4caf50; 
-} 
-
-/* Keyframes for fadeInUp animation */ 
-@keyframes fadeInUp { 
-    from { 
-        opacity: 0; 
-        transform: translateY(20px); 
-    } 
-
-    to { 
-        opacity: 1; 
-        transform: translateY(0); 
-    } 
-} 
-
-/* Animation for popup */ 
-.overlay-container.show { 
-    display: flex; 
-    opacity: 1; 
-} 
-
-
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Helvetica, Arial, sans-serif;
-  }
-  
-  body {
-    /*
-      Source:
-      https://codepen.io/chriscoyier/pen/gOpeMRL
-    */
-
-
-  
-    background: linear-gradient(135deg, var(--bg) 25%, transparent 25%) -50px 0,
-      linear-gradient(225deg, var(--bg) 25%, transparent 25%) -50px 0,
-      linear-gradient(315deg, var(--bg) 25%, transparent 25%),
-      linear-gradient(45deg, var(--bg) 25%, transparent 25%);
-    background-size: 100px 100px;
-
-  }
-  
-  .App {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-  
-  .button {
-    appearance: button;
-    background-color: #1899d6;
-    border: solid transparent;
-    border-radius: 16px;
-    border-width: 0 0 4px;
-    box-sizing: border-box;
-    color: #fff;
-    cursor: pointer;
-    font-size: 15px;
-    font-weight: 700;
-    letter-spacing: 0.8px;
-    line-height: 10px;
-    margin: 0;
-    padding: 10px 6px;
-    text-align: center;
-    text-transform: uppercase;
-    transform: translateZ(0);
-    user-select: none;
-    -webkit-user-select: none;
-    width: 100px;
-  }
-  
-  /* .button:after {
-    background-clip: padding-box;
-    background-color: #1cb0f6;
-    border: solid transparent;
-    border-radius: 16px;
-    border-width: 0 0 5px;
-    bottom: -4px;
-    content: '';
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: -1;
-  } */
-  
-  .button:main,
-  .button:focus {
-    user-select: auto;
-  }
-  
-  .button:hover:not(:disabled) {
-    filter: brightness(1.1);
-    -webkit-filter: brightness(1.1);
-  }
-  
-  .button:active:after {
-    background-color: #1899d6;
-  }
-  
-  .button-smaller {
-    display: block;
-    background-color: red;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    width: 200px;
-  }
-  
-  .button-smaller:after {
-    background-color: rgb(255, 79, 79);
-  }
-  
-  .modal {
-    position: relative;
-    background-color: #fff;
-    width: 500px;
-    height: 500px;
-    border: 1px solid rgb(179, 179, 179);
-    border-radius: 15px;
-    overflow: hidden;
-    margin: 0 15px 160px;
-  }
-  
-  .modal .footer {
-    width: 100%;
-    height: 60px;
-    background-color: rgb(243, 244, 246);
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    padding: 10px 1.5rem;
-    flex-direction: row-reverse;
-  }
-  
-  .modal-wrapper {
-    display: flex;
-    position: absolute;
-    justify-content: center;
-    align-items: center;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    background-color: rgba(107, 114, 128, 0.5);
-    z-index: 9;
-    width: 100%;
-    min-height: 100vh;
-  }
-  
-  .modal button {
-    border-radius: 0.375rem;
-    border-style: none;
-    background: rgb(220, 38, 38);
-    padding: 10px;
-    color: #fff;
-    line-height: 1.25rem;
-    cursor: pointer;
-  }
-  
-  .modal .body {
-    padding: 20px;
-  }
