--- a/src/components/WebSocket/WebSocketContainerStyles.css
+++ b/src/components/WebSocket/WebSocketContainerStyles.css
@@ -1,4 +1,4 @@
-.messagesContainer {
+.WebSocketContainer {
     padding: 0 25px;
     height: 300px;
     width: 300px;
@@ -65,3 +65,14 @@
   .button-smaller:after {
     background-color: rgb(255, 79, 79);
   }
+
+  .WSform-input { 
+    padding: 10px 10px; 
+    margin-bottom: 10px;
+    margin-right: 15px;
+    border: 1px solid #ccc; 
+    border-radius: 8px; 
+    font-size: 16px; 
+    width: 50%; 
+    box-sizing: border-box; 
+} 
